Fixed responsiveness of end game card on smaller screen sizes

--- a/public/css/game-responsive.css
+++ b/public/css/game-responsive.css
@@ -27,7 +27,8 @@
         font-size: 1.5rem;
     }
 
-    #startGameButton {
+    #startGameButton,
+    #startAIGameButton{
         font-size: 1.5rem;
       }
 
@@ -134,7 +135,8 @@
         font-size: 1rem;
     }
 
-    .end-of-game-section .end-of-game-container .container #restartGameButton {
+    .end-of-game-section .end-of-game-container .container #restartLocalGameButton,
+    .end-of-game-section .end-of-game-container .container #restartAIGameButton {
         font-size: 1rem;
       }
 }
